// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GithubCard should render correctly (snapshot) 1`] = `
<div>
  <div
    class="ant-ribbon-wrapper"
  >
    <div
      class="ant-card ant-card-bordered ant-card-hoverable"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <a
              href="https://github.com/sabertazimi"
            >
              <span
                aria-label="github"
                class="anticon anticon-github text-6xl align-top"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="github"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                  />
                </svg>
              </span>
              <span
                class="text-span-xl"
              >
                sabertazimi
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-card-meta"
        >
          <div
            class="ant-card-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                alt="sabertazimi"
                src="https://avatars.githubusercontent.com/u/12670482?v=4"
              />
            </span>
          </div>
          <div
            class="ant-card-meta-detail"
          >
            <div
              class="ant-card-meta-title"
            >
              <div
                class="ant-space ant-space-vertical"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <div>
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-2xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span"
                    >
                      CS
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <div>
                    <span
                      aria-label="environment"
                      class="anticon anticon-environment text-2xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="environment"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span"
                    >
                      Wuhan
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <a
                      href="https://github.com/sabertazimi/followers"
                    >
                      <span
                        aria-label="user"
                        class="anticon anticon-user text-2xl align-top"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="user"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                          />
                        </svg>
                      </span>
                      <span
                        class="text-span"
                      >
                        42 Followers
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-card-meta-description"
            >
              Joined in Sat May 30 2015
            </div>
          </div>
        </div>
        <div
          class="ant-ribbon-wrapper"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable mt-8"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <a
                    href="https://github.com/sabertazimi/hust-lab"
                  >
                    <span
                      aria-label="branches"
                      class="anticon anticon-branches text-4xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="branches"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M740 161c-61.8 0-112 50.2-112 112 0 50.1 33.1 92.6 78.5 106.9v95.9L320 602.4V318.1c44.2-15 76-56.9 76-106.1 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 49.2 31.8 91 76 106.1V706c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-27.8l423.5-138.7a50.52 50.52 0 0034.9-48.2V378.2c42.9-15.8 73.6-57 73.6-105.2 0-61.8-50.2-112-112-112zm-504 51a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm96 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm408-491a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span-lg"
                    >
                      hust-lab
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                class="ant-card-meta"
              >
                <div
                  class="ant-card-meta-detail"
                >
                  <div
                    class="ant-card-meta-title"
                  >
                    <span
                      class="ant-tag ant-tag-has-color mb-3"
                      style="background-color: rgb(215, 51, 108);"
                    >
                      C
                    </span>
                  </div>
                </div>
              </div>
              <span
                aria-label="star"
                class="anticon anticon-star text-2xl align-top"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </span>
              <span
                class="text-span"
              >
                22
              </span>
            </div>
          </div>
          <div
            class="ant-ribbon ant-ribbon-placement-end"
            style="background: rgb(55, 178, 77);"
          >
            <span
              class="ant-ribbon-text"
            >
              hust-lab
            </span>
            <div
              class="ant-ribbon-corner"
              style="color: rgb(55, 178, 77);"
            />
          </div>
        </div>
        <div
          class="ant-ribbon-wrapper"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable mt-8"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <a
                    href="https://github.com/sabertazimi/awesome-notes"
                  >
                    <span
                      aria-label="branches"
                      class="anticon anticon-branches text-4xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="branches"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M740 161c-61.8 0-112 50.2-112 112 0 50.1 33.1 92.6 78.5 106.9v95.9L320 602.4V318.1c44.2-15 76-56.9 76-106.1 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 49.2 31.8 91 76 106.1V706c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-27.8l423.5-138.7a50.52 50.52 0 0034.9-48.2V378.2c42.9-15.8 73.6-57 73.6-105.2 0-61.8-50.2-112-112-112zm-504 51a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm96 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm408-491a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span-lg"
                    >
                      awesome-notes
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                class="ant-card-meta"
              >
                <div
                  class="ant-card-meta-detail"
                >
                  <div
                    class="ant-card-meta-title"
                  >
                    <span
                      class="ant-tag ant-tag-has-color mb-3"
                      style="background-color: rgb(245, 159, 0);"
                    >
                      JavaScript
                    </span>
                  </div>
                </div>
              </div>
              <span
                aria-label="star"
                class="anticon anticon-star text-2xl align-top"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </span>
              <span
                class="text-span"
              >
                22
              </span>
            </div>
          </div>
          <div
            class="ant-ribbon ant-ribbon-placement-end"
            style="background: rgb(215, 51, 108);"
          >
            <span
              class="ant-ribbon-text"
            >
              awesome-notes
            </span>
            <div
              class="ant-ribbon-corner"
              style="color: rgb(215, 51, 108);"
            />
          </div>
        </div>
        <div
          class="ant-ribbon-wrapper"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable mt-8"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <a
                    href="https://github.com/sabertazimi/dragon-zsh-theme"
                  >
                    <span
                      aria-label="branches"
                      class="anticon anticon-branches text-4xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="branches"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M740 161c-61.8 0-112 50.2-112 112 0 50.1 33.1 92.6 78.5 106.9v95.9L320 602.4V318.1c44.2-15 76-56.9 76-106.1 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 49.2 31.8 91 76 106.1V706c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-27.8l423.5-138.7a50.52 50.52 0 0034.9-48.2V378.2c42.9-15.8 73.6-57 73.6-105.2 0-61.8-50.2-112-112-112zm-504 51a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm96 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm408-491a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span-lg"
                    >
                      dragon-zsh-theme
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                class="ant-card-meta"
              >
                <div
                  class="ant-card-meta-detail"
                >
                  <div
                    class="ant-card-meta-title"
                  >
                    <span
                      class="ant-tag ant-tag-has-color mb-3"
                      style="background-color: rgb(112, 72, 232);"
                    >
                      Zsh
                    </span>
                  </div>
                </div>
              </div>
              <span
                aria-label="star"
                class="anticon anticon-star text-2xl align-top"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </span>
              <span
                class="text-span"
              >
                11
              </span>
            </div>
          </div>
          <div
            class="ant-ribbon ant-ribbon-placement-end"
            style="background: rgb(66, 99, 235);"
          >
            <span
              class="ant-ribbon-text"
            >
              dragon-zsh-theme
            </span>
            <div
              class="ant-ribbon-corner"
              style="color: rgb(66, 99, 235);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-ribbon ant-ribbon-placement-end"
      style="background: rgb(247, 103, 7);"
    >
      <span
        class="ant-ribbon-text"
      >
        sabertazimi
      </span>
      <div
        class="ant-ribbon-corner"
        style="color: rgb(247, 103, 7);"
      />
    </div>
  </div>
</div>
`;

exports[`GithubCard should render correctly when missing bio and location data (snapshot) 1`] = `
<div>
  <div
    class="ant-ribbon-wrapper"
  >
    <div
      class="ant-card ant-card-bordered ant-card-hoverable"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            <a
              href="https://github.com/sabertazimi"
            >
              <span
                aria-label="github"
                class="anticon anticon-github text-6xl align-top"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="github"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M511.6 76.3C264.3 76.2 64 276.4 64 523.5 64 718.9 189.3 885 363.8 946c23.5 5.9 19.9-10.8 19.9-22.2v-77.5c-135.7 15.9-141.2-73.9-150.3-88.9C215 726 171.5 718 184.5 703c30.9-15.9 62.4 4 98.9 57.9 26.4 39.1 77.9 32.5 104 26 5.7-23.5 17.9-44.5 34.7-60.8-140.6-25.2-199.2-111-199.2-213 0-49.5 16.3-95 48.3-131.7-20.4-60.5 1.9-112.3 4.9-120 58.1-5.2 118.5 41.6 123.2 45.3 33-8.9 70.7-13.6 112.9-13.6 42.4 0 80.2 4.9 113.5 13.9 11.3-8.6 67.3-48.8 121.3-43.9 2.9 7.7 24.7 58.3 5.5 118 32.4 36.8 48.9 82.7 48.9 132.3 0 102.2-59 188.1-200 212.9a127.5 127.5 0 0138.1 91v112.5c.8 9 0 17.9 15 17.9 177.1-59.7 304.6-227 304.6-424.1 0-247.2-200.4-447.3-447.5-447.3z"
                  />
                </svg>
              </span>
              <span
                class="text-span-xl"
              >
                sabertazimi
              </span>
            </a>
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-card-meta"
        >
          <div
            class="ant-card-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                alt="sabertazimi"
                src="https://avatars.githubusercontent.com/u/12670482?v=4"
              />
            </span>
          </div>
          <div
            class="ant-card-meta-detail"
          >
            <div
              class="ant-card-meta-title"
            >
              <div
                class="ant-space ant-space-vertical"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <div>
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-2xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span"
                    >
                      No Description
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <div>
                    <span
                      aria-label="environment"
                      class="anticon anticon-environment text-2xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="environment"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M854.6 289.1a362.49 362.49 0 00-79.9-115.7 370.83 370.83 0 00-118.2-77.8C610.7 76.6 562.1 67 512 67c-50.1 0-98.7 9.6-144.5 28.5-44.3 18.3-84 44.5-118.2 77.8A363.6 363.6 0 00169.4 289c-19.5 45-29.4 92.8-29.4 142 0 70.6 16.9 140.9 50.1 208.7 26.7 54.5 64 107.6 111 158.1 80.3 86.2 164.5 138.9 188.4 153a43.9 43.9 0 0022.4 6.1c7.8 0 15.5-2 22.4-6.1 23.9-14.1 108.1-66.8 188.4-153 47-50.4 84.3-103.6 111-158.1C867.1 572 884 501.8 884 431.1c0-49.2-9.9-97-29.4-142zM512 880.2c-65.9-41.9-300-207.8-300-449.1 0-77.9 31.1-151.1 87.6-206.3C356.3 169.5 431.7 139 512 139s155.7 30.5 212.4 85.9C780.9 280 812 353.2 812 431.1c0 241.3-234.1 407.2-300 449.1zm0-617.2c-97.2 0-176 78.8-176 176s78.8 176 176 176 176-78.8 176-176-78.8-176-176-176zm79.2 255.2A111.6 111.6 0 01512 551c-29.9 0-58-11.7-79.2-32.8A111.6 111.6 0 01400 439c0-29.9 11.7-58 32.8-79.2C454 338.6 482.1 327 512 327c29.9 0 58 11.6 79.2 32.8C612.4 381 624 409.1 624 439c0 29.9-11.6 58-32.8 79.2z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span"
                    >
                      Earth
                    </span>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div>
                    <a
                      href="https://github.com/sabertazimi/followers"
                    >
                      <span
                        aria-label="user"
                        class="anticon anticon-user text-2xl align-top"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="user"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M858.5 763.6a374 374 0 00-80.6-119.5 375.63 375.63 0 00-119.5-80.6c-.4-.2-.8-.3-1.2-.5C719.5 518 760 444.7 760 362c0-137-111-248-248-248S264 225 264 362c0 82.7 40.5 156 102.8 201.1-.4.2-.8.3-1.2.5-44.8 18.9-85 46-119.5 80.6a375.63 375.63 0 00-80.6 119.5A371.7 371.7 0 00136 901.8a8 8 0 008 8.2h60c4.4 0 7.9-3.5 8-7.8 2-77.2 33-149.5 87.8-204.3 56.7-56.7 132-87.9 212.2-87.9s155.5 31.2 212.2 87.9C779 752.7 810 825 812 902.2c.1 4.4 3.6 7.8 8 7.8h60a8 8 0 008-8.2c-1-47.8-10.9-94.3-29.5-138.2zM512 534c-45.9 0-89.1-17.9-121.6-50.4S340 407.9 340 362c0-45.9 17.9-89.1 50.4-121.6S466.1 190 512 190s89.1 17.9 121.6 50.4S684 316.1 684 362c0 45.9-17.9 89.1-50.4 121.6S557.9 534 512 534z"
                          />
                        </svg>
                      </span>
                      <span
                        class="text-span"
                      >
                        42 Followers
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-card-meta-description"
            >
              Joined in Sat May 30 2015
            </div>
          </div>
        </div>
        <div
          class="ant-ribbon-wrapper"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable mt-8"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <a
                    href="https://github.com/sabertazimi/hust-lab"
                  >
                    <span
                      aria-label="branches"
                      class="anticon anticon-branches text-4xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="branches"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M740 161c-61.8 0-112 50.2-112 112 0 50.1 33.1 92.6 78.5 106.9v95.9L320 602.4V318.1c44.2-15 76-56.9 76-106.1 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 49.2 31.8 91 76 106.1V706c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-27.8l423.5-138.7a50.52 50.52 0 0034.9-48.2V378.2c42.9-15.8 73.6-57 73.6-105.2 0-61.8-50.2-112-112-112zm-504 51a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm96 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm408-491a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span-lg"
                    >
                      hust-lab
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                class="ant-card-meta"
              >
                <div
                  class="ant-card-meta-detail"
                >
                  <div
                    class="ant-card-meta-title"
                  >
                    <span
                      class="ant-tag ant-tag-has-color mb-3"
                      style="background-color: rgb(215, 51, 108);"
                    >
                      C
                    </span>
                  </div>
                </div>
              </div>
              <span
                aria-label="star"
                class="anticon anticon-star text-2xl align-top"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </span>
              <span
                class="text-span"
              >
                22
              </span>
            </div>
          </div>
          <div
            class="ant-ribbon ant-ribbon-placement-end"
            style="background: rgb(55, 178, 77);"
          >
            <span
              class="ant-ribbon-text"
            >
              hust-lab
            </span>
            <div
              class="ant-ribbon-corner"
              style="color: rgb(55, 178, 77);"
            />
          </div>
        </div>
        <div
          class="ant-ribbon-wrapper"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable mt-8"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <a
                    href="https://github.com/sabertazimi/awesome-notes"
                  >
                    <span
                      aria-label="branches"
                      class="anticon anticon-branches text-4xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="branches"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M740 161c-61.8 0-112 50.2-112 112 0 50.1 33.1 92.6 78.5 106.9v95.9L320 602.4V318.1c44.2-15 76-56.9 76-106.1 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 49.2 31.8 91 76 106.1V706c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-27.8l423.5-138.7a50.52 50.52 0 0034.9-48.2V378.2c42.9-15.8 73.6-57 73.6-105.2 0-61.8-50.2-112-112-112zm-504 51a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm96 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm408-491a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span-lg"
                    >
                      awesome-notes
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                class="ant-card-meta"
              >
                <div
                  class="ant-card-meta-detail"
                >
                  <div
                    class="ant-card-meta-title"
                  >
                    <span
                      class="ant-tag ant-tag-has-color mb-3"
                      style="background-color: rgb(245, 159, 0);"
                    >
                      JavaScript
                    </span>
                  </div>
                </div>
              </div>
              <span
                aria-label="star"
                class="anticon anticon-star text-2xl align-top"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </span>
              <span
                class="text-span"
              >
                22
              </span>
            </div>
          </div>
          <div
            class="ant-ribbon ant-ribbon-placement-end"
            style="background: rgb(215, 51, 108);"
          >
            <span
              class="ant-ribbon-text"
            >
              awesome-notes
            </span>
            <div
              class="ant-ribbon-corner"
              style="color: rgb(215, 51, 108);"
            />
          </div>
        </div>
        <div
          class="ant-ribbon-wrapper"
        >
          <div
            class="ant-card ant-card-bordered ant-card-hoverable mt-8"
          >
            <div
              class="ant-card-head"
            >
              <div
                class="ant-card-head-wrapper"
              >
                <div
                  class="ant-card-head-title"
                >
                  <a
                    href="https://github.com/sabertazimi/dragon-zsh-theme"
                  >
                    <span
                      aria-label="branches"
                      class="anticon anticon-branches text-4xl align-top"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="branches"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M740 161c-61.8 0-112 50.2-112 112 0 50.1 33.1 92.6 78.5 106.9v95.9L320 602.4V318.1c44.2-15 76-56.9 76-106.1 0-61.8-50.2-112-112-112s-112 50.2-112 112c0 49.2 31.8 91 76 106.1V706c-44.2 15-76 56.9-76 106.1 0 61.8 50.2 112 112 112s112-50.2 112-112c0-49.2-31.8-91-76-106.1v-27.8l423.5-138.7a50.52 50.52 0 0034.9-48.2V378.2c42.9-15.8 73.6-57 73.6-105.2 0-61.8-50.2-112-112-112zm-504 51a48.01 48.01 0 0196 0 48.01 48.01 0 01-96 0zm96 600a48.01 48.01 0 01-96 0 48.01 48.01 0 0196 0zm408-491a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
                        />
                      </svg>
                    </span>
                    <span
                      class="text-span-lg"
                    >
                      dragon-zsh-theme
                    </span>
                  </a>
                </div>
              </div>
            </div>
            <div
              class="ant-card-body"
            >
              <div
                class="ant-card-meta"
              >
                <div
                  class="ant-card-meta-detail"
                >
                  <div
                    class="ant-card-meta-title"
                  >
                    <span
                      class="ant-tag ant-tag-has-color mb-3"
                      style="background-color: rgb(112, 72, 232);"
                    >
                      Zsh
                    </span>
                  </div>
                </div>
              </div>
              <span
                aria-label="star"
                class="anticon anticon-star text-2xl align-top"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3zM664.8 561.6l36.1 210.3L512 672.7 323.1 772l36.1-210.3-152.8-149L417.6 382 512 190.7 606.4 382l211.2 30.7-152.8 148.9z"
                  />
                </svg>
              </span>
              <span
                class="text-span"
              >
                11
              </span>
            </div>
          </div>
          <div
            class="ant-ribbon ant-ribbon-placement-end"
            style="background: rgb(66, 99, 235);"
          >
            <span
              class="ant-ribbon-text"
            >
              dragon-zsh-theme
            </span>
            <div
              class="ant-ribbon-corner"
              style="color: rgb(66, 99, 235);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-ribbon ant-ribbon-placement-end"
      style="background: rgb(247, 103, 7);"
    >
      <span
        class="ant-ribbon-text"
      >
        sabertazimi
      </span>
      <div
        class="ant-ribbon-corner"
        style="color: rgb(247, 103, 7);"
      />
    </div>
  </div>
</div>
`;
